plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.handfair'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
	jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
	jvmArgs += "--enable-preview"
}

repositories {
	mavenCentral()
}


task copyAppJar(type:Copy){
	dependsOn bootJar
	from bootJar.archiveFile.get().asFile
	rename {String filename -> return "servlet_api_gw.jar"}
	into "${rootProject.buildDir}/output-docker"
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'

}

tasks.named('test') {
	useJUnitPlatform()
}
